--- a/index.html
+++ b/index.html
@@ -148,6 +148,18 @@
                             </div>
                         </div>
 
+                        <!-- 目標總量設定 -->
+                        <div class="weight-group">
+                            <h4>🎯 目標總量</h4>
+                            <div class="weight-inputs">
+                                <label>
+                                    <span class="weight-label-text">目標總 Safety</span>
+                                    <input type="number" id="targetTotal" value="" min="0" step="1" class="weight-input" placeholder="例如 1200">
+                                </label>
+                            </div>
+                            <p class="weight-hint">💡 依現有店舖數量與權重比例自動分配，會以整數套用。</p>
+                        </div>
+
                         <!-- 快速模板 -->
                         <div class="weight-group">
                             <h4>📋 快速模板</h4>
