--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <div class="container">
         <header>
-            <h1>🏪 New SKU Safety Stock 計算器</h1>
-            <p class="subtitle">根據店舖分類計算安全庫存需求</p>
+            <h1>🧮 New SKU Safety (Buffer) Stock Calculator</h1>
+            <p class="subtitle">新產品安全(緩衝)庫存計算器</p>
         </header>
 
         <main>
