--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     <button type="button" class="weight-toggle-btn" id="toggleWeightPanel">
                         ⚙️ 權重快速設定
                     </button>
-                    
-                    <div class="weight-content" id="weightContent" style="display:none">
+
+                    <div class="weight-content" id="weightContent">
                         <!-- 算式簡介說明 (摺疊式) -->
                         <div class="weight-formula-intro">
                             <button type="button" class="formula-toggle-btn" id="formulaToggleBtn">
