--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@
                                 <button type="button" class="btn btn-secondary template-btn" data-template="current">目前設定</button>
                                 <button type="button" class="btn btn-secondary template-btn" data-template="default">預設權重</button>
                                 <button type="button" class="btn btn-secondary template-btn" data-template="balanced">平衡權重</button>
+                                <button type="button" class="btn btn-secondary template-btn" data-template="conservative">保守型</button>
+                                <button type="button" class="btn btn-secondary template-btn" data-template="aggressive">積極型</button>
                             </div>
                         </div>
 
@@ -194,6 +196,7 @@
                     <button type="button" id="saveMatrixBtn" class="btn btn-success" style="display:none">保存</button>
                     <button type="button" id="cancelMatrixBtn" class="btn btn-secondary" style="display:none">取消</button>
                     <button type="button" id="resetMatrixBtn" class="btn btn-danger" style="display:none">重置為預設</button>
+                    <button type="button" id="applyMatrixBtn" class="btn btn-primary">套用到選擇店鋪</button>
                 </div>
                 
                 <div id="matrixContainer" class="matrix-container">
@@ -210,6 +213,7 @@
                         <button id="selectAllBtn" class="btn btn-primary">全選</button>
                         <button id="deselectAllBtn" class="btn btn-secondary">取消全選</button>
                         <button id="invertSelectionBtn" class="btn btn-secondary">反向選擇</button>
+                        <button id="clearFiltersBtn" class="btn btn-secondary">取消篩選</button>
                         <span id="storeCount" class="store-count">顯示 0 間 / 已選 0 間</span>
                     </div>
                 </div>
