--- a/index.html
+++ b/index.html
@@ -174,12 +174,17 @@
 
                         <!-- 操作按鈕 -->
                         <div class="weight-actions">
-                            <button type="button" id="previewWeightsBtn" class="btn btn-info">
-                                👁️ 預覽結果
-                            </button>
-                            <button type="button" id="applyWeightsBtn" class="btn btn-success btn-large">
-                                🚀 套用權重計算
-                            </button>
+                            <div class="apply-buttons">
+                                <button type="button" id="previewWeightsBtn" class="btn btn-info">
+                                    👁️ 預覽結果
+                                </button>
+                                <button type="button" id="applyWeightsBtn" class="btn btn-apply btn-large">
+                                    🚀 套用權重計算
+                                </button>
+                            </div>
+                            <div class="next-step-hint">
+                                <small>💡 提示：點擊「套用權重計算」後，請點擊「套用到選擇店鋪」以應用到店鋪</small>
+                            </div>
                         </div>
 
                         <!-- 預覽區域 -->
@@ -196,7 +201,10 @@
                     <button type="button" id="saveMatrixBtn" class="btn btn-success" style="display:none">保存</button>
                     <button type="button" id="cancelMatrixBtn" class="btn btn-secondary" style="display:none">取消</button>
                     <button type="button" id="resetMatrixBtn" class="btn btn-danger" style="display:none">重置為預設</button>
-                    <button type="button" id="applyMatrixBtn" class="btn btn-primary">套用到選擇店鋪</button>
+                    <button type="button" id="applyMatrixBtn" class="btn btn-apply">套用到選擇店鋪</button>
+                </div>
+                <div class="next-step-hint">
+                    <small>💡 提示：完成權重設定後，請點擊「套用到選擇店鋪」以更新店鋪 Safety Stock</small>
                 </div>
                 
                 <div id="matrixContainer" class="matrix-container">
@@ -352,13 +360,16 @@
                 <h2>📊 計算結果</h2>
                 
                 <div class="results-controls">
-                    <button id="calculateBtn" class="btn btn-success btn-large">🔢 計算 Safety Stock</button>
+                    <button id="calculateBtn" class="btn btn-apply btn-large">🔢 計算 Safety Stock</button>
                     <button id="exportBtn" class="btn btn-info">📥 匯出 CSV</button>
                     <button id="exportExcelBtn" class="btn btn-info">📊 匯出 Excel</button>
                     <button id="exportConfigBtn" class="btn btn-info">💾 匯出配置</button>
                     <button id="importBtn" class="btn btn-info">📤 匯入配置</button>
                     <button id="printBtn" class="btn btn-info">🖨️ 打印</button>
                     <input type="file" id="importFile" accept=".json" style="display: none;">
+                </div>
+                <div class="next-step-hint">
+                    <small>💡 提示：完成店鋪選擇後，請點擊「計算 Safety Stock」以獲得結果</small>
                 </div>
 
                 <!-- 統計信息 -->
