--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
     </div>
 
     <div class="container">
+        <!-- 頂部警告訊息 -->
+        <div class="warning-banner" style="background-color: #fff3cd; border: 2px solid #ff6b6b; border-radius: 8px; padding: 16px 20px; margin-bottom: 20px; text-align: center;">
+            <div style="color: #d32f2f; font-weight: bold; font-size: 16px; margin-bottom: 8px;">
+                ⚠️ 內部測試中 - BETA Testing
+            </div>
+            <div style="color: #c62828; font-size: 14px;">
+                用戶需再次核對內容 | Users need to verify the content again
+            </div>
+        </div>
+
         <header>
             <h1>🧮 New SKU Safety (Buffer) Stock Calculator</h1>
             <p class="subtitle">新產品安全(緩衝)庫存計算器</p>
@@ -381,6 +391,12 @@
             <!-- 計算結果區域 -->
             <section class="section results-section">
                 <h2>📊 計算結果</h2>
+                <!-- 計算結果警告訊息 -->
+                <div class="warning-banner" style="background-color: #fff3cd; border: 1px solid #ffc107; border-radius: 6px; padding: 12px 16px; margin-bottom: 16px; text-align: center;">
+                    <div style="color: #856404; font-weight: bold; font-size: 14px;">
+                        ⚠️ 內部測試中 | 用戶需再次核對內容 (Please verify the calculated values)
+                    </div>
+                </div>
                 
                 <div class="results-controls">
                     <button id="calculateBtn" class="btn btn-apply btn-large">🔢 計算 Safety Stock</button>
