--- a/index.html
+++ b/index.html
@@ -402,6 +402,7 @@
                     <button id="calculateBtn" class="btn btn-apply btn-large">🔢 計算 Safety Stock</button>
                     <button id="exportBtn" class="btn btn-info">📥 匯出 CSV</button>
                     <button id="exportExcelBtn" class="btn btn-info">📊 匯出 Excel</button>
+                    <button id="exportExcelWithFormulasBtn" class="btn btn-info">📊 匯出 Excel (含公式)</button>
                     <button id="exportConfigBtn" class="btn btn-info">💾 匯出配置</button>
                     <button id="importBtn" class="btn btn-info">📤 匯入配置</button>
                     <button id="printBtn" class="btn btn-info">🖨️ 打印</button>
