--- a/index.html
+++ b/index.html
@@ -396,6 +396,9 @@
                     <div style="color: #856404; font-weight: bold; font-size: 14px;">
                         ⚠️ 內部測試中 | 用戶需再次核對內容 (Please verify the calculated values)
                     </div>
+                    <div style="color: #856404; font-size: 13px; margin-top: 6px;">
+                        此小程序只供協助計算, 用戶更改Safety Stock都必須於X:/to RP team內填寫申請表.
+                    </div>
                 </div>
                 
                 <div class="results-controls">
