--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@ MA01,澳門廣場,MO,B,M,
         </main>
 
         <footer>
-            <p>New SKU Safety (Buffer) Stock Calculator (2026) – RP Team Tool</p>
+            <p>New SKU Safety (Buffer) Stock Calculator (2026) – RP Team (COO Phase 2 Project)</p>
             <p>(Developed by RP-Ricky Yue | Concept provided by CMPD-Natalie Wong)</p>
         </footer>
     </div>
