--- a/USER_MANUAL.html
+++ b/USER_MANUAL.html
@@ -2042,8 +2042,8 @@ MO,MA01,澳門廣場,MOBM,B,M,7,Y</pre>
 
         <!-- 頁腳 -->
         <div class="footer">
-            <p><strong>New SKU Safety (Buffer) Stock Calculator (2026) – RP Team</strong></p>
-            <p>(Developed by RP-Ricky Yue | Concept provided by CMPD-Natalie Wong)</p>
+            <p><strong>New SKU Safety Stock Calculator v1.2</strong></p>
+            <p>© 2026 RP Team</p>
             <p style="margin-top: 15px; font-size: 9pt; color: #999;">
                 本說明文件支援 PDF 列印，請使用瀏覽器的「列印」功能將其儲存為 PDF 檔案。
             </p>
