--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                 <div class="formula-params">
                                     <div class="param-item">
                                         <span class="param-name">🔢 基礎值：</span>
-                                        <span class="param-desc">所有店舖的 Safety Stock 基礎數值（預設 4）</span>
+                                        <span class="param-desc">所有店舖的 Safety Stock 基礎數值（預設 6）</span>
                                     </div>
                                     <div class="param-item">
                                         <span class="param-name">📊 Class權重：</span>
@@ -88,7 +88,7 @@
                                         <div class="formula-example-item">
                                             <strong>✅ 範例1 - 正常計算：</strong>
                                             <p><strong>條件：</strong>A級店舖 (Class權重=3) + 大型貨場 (Size權重=3) + 澳門 (區域係數=1.3)</p>
-                                            <p><strong>計算：</strong>4 + (3 × 3 × 1.3) = 4 + 11.7 ≈ <strong>16</strong> ✓</p>
+                                            <p><strong>計算：</strong>6 + (3 × 3 × 1.3) = 6 + 11.7 ≈ <strong>18</strong> ✓</p>
                                             <p class="example-note">💡 所有權重都有值，正常計算結果</p>
                                         </div>
 
@@ -325,7 +325,7 @@
                                 <div class="filter-buttons om-filter-buttons">
                                     <button class="filter-btn om-filter-btn" data-filter="manager" data-value="Candy" title="Candy 負責的店鋪">
                                         <span class="om-name">Candy</span>
-                                        <span class="om-count">13間</span>
+                                        <span class="om-count">11間</span>
                                     </button>
                                     <button class="filter-btn om-filter-btn" data-filter="manager" data-value="Eva" title="Eva 負責的店鋪">
                                         <span class="om-name">Eva</span>
@@ -333,7 +333,7 @@
                                     </button>
                                     <button class="filter-btn om-filter-btn" data-filter="manager" data-value="Hippo" title="Hippo 負責的店鋪">
                                         <span class="om-name">Hippo</span>
-                                        <span class="om-count">14間</span>
+                                        <span class="om-count">15間</span>
                                     </button>
                                     <button class="filter-btn om-filter-btn" data-filter="manager" data-value="Ivy" title="Ivy 負責的店鋪">
                                         <span class="om-name">Ivy</span>
@@ -553,8 +553,7 @@ MA01,澳門廣場,MO,B,M,
         </main>
 
         <footer>
-            <p>New SKU Safety (Buffer) Stock Calculator (2026) – RP Team</p>
-            <p>(Developed by RP-Ricky Yue | Concept provided by CMPD-Natalie Wong)</p>
+            <p>New SKU Safety (Buffer) Stock Calculator (2026) – RP Team Tool</p>
         </footer>
     </div>
 
