--- a/index.html
+++ b/index.html
@@ -243,6 +243,11 @@
                 <div id="matrixContainer" class="matrix-container">
                     <!-- Safety Stock 對照表將由 JavaScript 生成 -->
                 </div>
+
+                <!-- 對照表統計摘要 -->
+                <div id="matrixSummaryContainer" class="matrix-summary-container">
+                    <!-- 統計摘要將由 JavaScript 生成 -->
+                </div>
             </section>
 
             <!-- 店鋪選擇區域 -->
