--- a/USER_MANUAL.html
+++ b/USER_MANUAL.html
@@ -646,8 +646,8 @@
         </h1>
 
         <!-- 版本資訊 -->
-        <p style="text-align: center; color: #888; margin-bottom: 30px;">
-            版本 v1.2 | 更新日期：2026年2月
+            <p style="text-align: center; color: #888; margin-bottom: 30px;">
+            版本 v1.3 | 更新日期：2026年2月8日
         </p>
 
         <!-- 目錄 -->
@@ -667,6 +667,41 @@
         </div>
 
         <div class="divider"></div>
+
+        <!-- 開發者筆記 -->
+        <section id="developer-notes">
+            <h2><span class="index-tag">A</span>開發者筆記（Developer Notes）</h2>
+            <p>本段為開發者與維護者快速參考，列出目前前端程式中的關鍵變數、函式與 UI id，方便對照與修改。</p>
+
+            <h3>核心資料與函式</h3>
+            <ul>
+                <li><strong>`config.js`：</strong>主要業務資料來源（`STORES_CONFIG`, `SAFETY_STOCK_MATRIX`, `WEIGHT_CONFIG`, `WEIGHT_TEMPLATES`）。</li>
+                <li><strong>`getSafetyStockValue(region, category, size)`：</strong>從 `SAFETY_STOCK_MATRIX` 讀取 Safety Stock 值。</li>
+                <li><strong>`calculateSafetyStockWithWeights(region, category, size, weights)`：</strong>使用權重計算單一 Safety Stock 值。</li>
+                <li><strong>`generateMatrixWithWeights(weights)`：</strong>根據權重生成整張對照表。</li>
+                <li><strong>`customStoreStock`：</strong>物件，存儲個別店鋪覆寫的 Safety Stock（key = `Site`）。</li>
+            </ul>
+
+            <h3>重要 UI 元素 (id)</h3>
+            <ul>
+                <li><code>calculateBtn</code> - 執行計算</li>
+                <li><code>exportBtn</code> / <code>exportExcelBtn</code> - 匯出 CSV / Excel</li>
+                <li><code>exportConfigBtn</code> / <code>importFile</code> - 匯出 / 匯入 JSON 設定</li>
+                <li><code>storesCsvFile</code> - 店鋪 CSV 上傳 input</li>
+                <li><code>editMatrixBtn</code> / <code>saveMatrixBtn</code> - 編輯對照表</li>
+                <li><code>themeToggleBtn</code>, <code>themePanel</code>, <code>themeList</code> - 主題切換</li>
+                <li><code>storesContainer</code> - 店鋪列表容器（內含 `.editable-store-stock` 可 inline 編輯）</li>
+            </ul>
+
+            <h3>其他說明</h3>
+            <ul>
+                <li>Inline 編輯：店鋪列表的 `.editable-store-stock` 元素支援點擊編輯，按 <kbd>Enter</kbd> 儲存、<kbd>Esc</kbd> 取消。</li>
+                <li>本專案為純前端（無後端），所有狀態均保存在 localStorage 或記憶體中。</li>
+                <li>變更業務資料（如對照表或店鋪名單）時，請優先修改 `config.js`。</li>
+                <li>本專案包含 GitHub 模板與貢獻指南：`CONTRIBUTING.md`、`.github/PULL_REQUEST_TEMPLATE.md`、`.github/ISSUE_TEMPLATE/`。</li>
+                <li class="warning-box">安全提醒：不要在任何會上傳到版本控制或公開的檔案中硬編碼密碼或金鑰（例如 `app.js`、`config.js`）。請使用環境變數、CI secrets（GitHub Secrets）或專業秘密管理服務來保存敏感資訊。</li>
+            </ul>
+        </section>
 
         <!-- 第1章：程式簡介 -->
         <section id="section1">
@@ -1764,7 +1799,7 @@ php -S localhost:8000</pre>
 
             <h4>CSV 格式範例：</h4>
             <pre>店鋪詳細清單
-生成日期: 2026/02/03 15:30:00
+生成日期: 2026/02/08 15:30:00
 
 HK/MO,代號,店鋪,類型代碼,舖類,貨場面積,Safety Stock,Carry
 HK,HA01,銅鑼灣一號,HKAL,A,L,6,Y
@@ -1832,10 +1867,13 @@ MO,MA01,澳門廣場,MOBM,B,M,7,Y</pre>
                 <li><strong>版本控制</strong>：使用 Git 上傳到 GitHub</li>
             </ol>
 
-            <h3>Q5：如何修改預設密碼？</h3>
-            <p>編輯 <code>app.js</code> 檔案，找到以下行：</p>
-            <pre>const ADMIN_PASSWORD = '0000'; // 預設密碼</pre>
-            <p>將 <code>'0000'</code> 改為您想要的密碼。</p>
+            <h3>Q5：如何變更管理員密碼？</h3>
+            <p>為避免在文件中暴露密碼，請不要在公開文件中記錄或張貼任何密碼。如果您需要變更管理員密碼，請透過受控且安全的渠道處理：</p>
+            <ol>
+                <li>聯絡系統管理員或維護人員由其在安全環境下進行修改。</li>
+                <li>若需在程式碼中設定或更新，請使用受保護的設定管理流程（例如環境變數或受限的設定檔），並避免在版本控制或公開文件中硬編碼密碼。</li>
+                <li>變更後請立即更新相關憑證管理與備份流程，並通知受影響的管理人員。</li>
+            </ol>
 
             <h3>Q6：權重計算結果不合理？</h3>
             <ol>
@@ -2042,7 +2080,7 @@ MO,MA01,澳門廣場,MOBM,B,M,7,Y</pre>
 
         <!-- 頁腳 -->
         <div class="footer">
-            <p><strong>New SKU Safety Stock Calculator v1.2</strong></p>
+            <p><strong>New SKU Safety Stock Calculator v1.3</strong></p>
             <p>© 2026 RP Team</p>
             <p style="margin-top: 15px; font-size: 9pt; color: #999;">
                 本說明文件支援 PDF 列印，請使用瀏覽器的「列印」功能將其儲存為 PDF 檔案。
