--- a/index.html
+++ b/index.html
@@ -37,7 +37,15 @@
             <p class="subtitle">新產品安全(緩衝)庫存計算器</p>
         </header>
 
+        <!-- 分頁切換導航 -->
+        <nav class="tab-navigation">
+            <button class="tab-btn active" data-tab="calculator">🧮 計算器</button>
+            <button class="tab-btn" data-tab="quickReport">📊 快速報表</button>
+        </nav>
+
         <main>
+        <!-- ===== 分頁：計算器（原有內容）===== -->
+        <div class="tab-panel active" id="tab-calculator">
             <!-- Safety Stock 對照表 -->
             <section class="section matrix-section">
                 <h2>📋 Safety Stock 對照表</h2>
@@ -59,7 +67,7 @@
                             <div class="formula-content" id="formulaContent">
                                 <div class="formula-box">
                                     <div class="formula-title">計算公式：</div>
-                                    <code class="formula-code">Safety Stock = 基礎值 + (Class權重 × Size權重 × 區域係數)</code>
+                                    <code class="formula-code">Safety Stock = 基礎值 + (Class權重 × Size權重 × Type權重 × 區域係數)</code>
                                 </div>
 
                                 <div class="formula-params">
@@ -76,8 +84,12 @@
                                         <span class="param-desc">根據貨場面積 (XL/L/M/S/XS) 設定的權重係數</span>
                                     </div>
                                     <div class="param-item">
+                                        <span class="param-name">🏪 Type權重：</span>
+                                        <span class="param-desc">根據店舖類型 (T-遊客區/M-混合型/L-本地客源) 設定的權重係數，用於調整不同客源特性的庫存需求</span>
+                                    </div>
+                                    <div class="param-item">
                                         <span class="param-name">🌍 區域係數：</span>
-                                        <span class="param-desc">香港(HK)通常為 1.0，澳門(MO)通常較高（如 1.3）以反映不同市場需求</span>
+                                        <span class="param-desc">香港(HK)通常為 1.0，澳門(MO)通常較高（如 1.33）以反映不同市場需求</span>
                                     </div>
                                 </div>
 
@@ -86,16 +98,24 @@
                                     <div class="example-content">
                                         <!-- 範例1：正常情況 -->
                                         <div class="formula-example-item">
-                                            <strong>✅ 範例1 - 正常計算：</strong>
-                                            <p><strong>條件：</strong>A級店舖 (Class權重=3) + 大型貨場 (Size權重=3) + 澳門 (區域係數=1.3)</p>
-                                            <p><strong>計算：</strong>4 + (3 × 3 × 1.3) = 4 + 11.7 ≈ <strong>16</strong> ✓</p>
-                                            <p class="example-note">💡 所有權重都有值，正常計算結果</p>
+                                            <strong>✅ 範例1 - 遊客區大型A級店舖：</strong>
+                                            <p><strong>條件：</strong>A級店舖 (Class權重=1.8) + 大型貨場 (Size權重=1.6) + 遊客區 (Type權重=1.2) + 澳門 (區域係數=1.33)</p>
+                                            <p><strong>計算：</strong>4 + (1.8 × 1.6 × 1.2 × 1.33) = 4 + 4.6 ≈ <strong>9</strong> ✓</p>
+                                            <p class="example-note">💡 遊客區店舖 (Type=T) 庫存需求較高（權重1.2）</p>
                                         </div>
 
-                                        <!-- 範例2：區域係數為0的情況 -->
+                                        <!-- 範例2：本地客源 -->
                                         <div class="formula-example-item">
-                                            <strong>⚠️ 範例2 - 區域係數為0（不需要庫存）：</strong>
-                                            <p><strong>條件：</strong>B級店舖 (Class權重=2) + 中型貨場 (Size權重=1.5) + 某區域 (區域係數=0)</p>
+                                            <strong>✅ 範例2 - 本地客源小型C級店舖：</strong>
+                                            <p><strong>條件：</strong>C級店舖 (Class權重=1.0) + 小型貨場 (Size權重=0.8) + 本地客源 (Type權重=0.9) + 香港 (區域係數=1.0)</p>
+                                            <p><strong>計算：</strong>4 + (1.0 × 0.8 × 0.9 × 1.0) = 4 + 0.72 ≈ <strong>5</strong> ✓</p>
+                                            <p class="example-note">💡 本地客源店舖 (Type=L) 庫存需求較低（權重0.9）</p>
+                                        </div>
+
+                                        <!-- 範例3：區域係數為0的情況 -->
+                                        <div class="formula-example-item">
+                                            <strong>⚠️ 範例3 - 區域係數為0（不需要庫存）：</strong>
+                                            <p><strong>條件：</strong>B級店舖 (Class權重=1.4) + 中型貨場 (Size權重=1.2) + 混合型 (Type權重=1.0) + 某區域 (區域係數=0)</p>
                                             <p><strong>計算：</strong>只要區域係數為0，Safety Stock直接為 <strong>0</strong> ✓</p>
                                             <p class="example-note">⚠️ 當任何權重參數為0時，整個計算結果為0，表示該區域不需要庫存</p>
                                         </div>
@@ -150,6 +170,26 @@
                                 <label>
                                     <span class="weight-label-text">XS</span>
                                     <input type="number" id="weightSizeXS" value="1.5" min="0" step="0.5" class="weight-input">
+                                </label>
+                            </div>
+                        </div>
+
+                        <!-- Type 權重設定 (新增) -->
+                        <div class="weight-group">
+                            <h4>🏪 Type 權重 - 店舖類型 (T:M:L)</h4>
+                            <p class="weight-hint-small">T=遊客區 | M=混合型 | L=本地客源</p>
+                            <div class="weight-inputs">
+                                <label class="weight-label-t">
+                                    <span class="weight-label-text">T - 遊客區</span>
+                                    <input type="number" id="weightTypeT" value="1.2" min="0" step="0.05" class="weight-input">
+                                </label>
+                                <label class="weight-label-m">
+                                    <span class="weight-label-text">M - 混合型</span>
+                                    <input type="number" id="weightTypeM" value="1.0" min="0" step="0.05" class="weight-input">
+                                </label>
+                                <label class="weight-label-l">
+                                    <span class="weight-label-text">L - 本地客源</span>
+                                    <input type="number" id="weightTypeL" value="0.9" min="0" step="0.05" class="weight-input">
                                 </label>
                             </div>
                         </div>
@@ -243,6 +283,11 @@
                 <div id="matrixContainer" class="matrix-container">
                     <!-- Safety Stock 對照表將由 JavaScript 生成 -->
                 </div>
+
+                <!-- 對照表統計摘要 -->
+                <div id="matrixSummaryContainer" class="matrix-summary-container">
+                    <!-- 統計摘要將由 JavaScript 生成 -->
+                </div>
             </section>
 
             <!-- 店鋪選擇區域 -->
@@ -255,6 +300,7 @@
                         <button id="deselectAllBtn" class="btn btn-secondary">取消全選</button>
                         <button id="invertSelectionBtn" class="btn btn-secondary">反向選擇</button>
                         <button id="clearFiltersBtn" class="btn btn-secondary">取消篩選</button>
+                        <button id="resetCustomStockBtn" class="btn btn-warning" title="重設所有店鋪的自訂 Safety Stock 值">🔄 重設自訂值</button>
                         <span id="storeCount" class="store-count">顯示 0 間 / 已選 0 間</span>
                     </div>
                 </div>
@@ -308,6 +354,16 @@
                                 </div>
                             </div>
 
+                            <!-- 客源類型 Type -->
+                            <div class="filter-group">
+                                <label class="filter-label">按客源類型</label>
+                                <div class="filter-buttons">
+                                    <button class="filter-btn" data-filter="type" data-value="T" style="background:#ff6b6b; color:white;">🔴 遊客 (T)</button>
+                                    <button class="filter-btn" data-filter="type" data-value="M" style="background:#4ecdc4; color:white;">🔵 混合 (M)</button>
+                                    <button class="filter-btn" data-filter="type" data-value="L" style="background:#45b7d1; color:white;">🟢 本地 (L)</button>
+                                </div>
+                            </div>
+
                             <!-- 店鋪組別 -->
                             <div class="filter-group">
                                 <label class="filter-label">按店鋪組別</label>
@@ -325,7 +381,7 @@
                                 <div class="filter-buttons om-filter-buttons">
                                     <button class="filter-btn om-filter-btn" data-filter="manager" data-value="Candy" title="Candy 負責的店鋪">
                                         <span class="om-name">Candy</span>
-                                        <span class="om-count">13間</span>
+                                        <span class="om-count">11間</span>
                                     </button>
                                     <button class="filter-btn om-filter-btn" data-filter="manager" data-value="Eva" title="Eva 負責的店鋪">
                                         <span class="om-name">Eva</span>
@@ -333,7 +389,7 @@
                                     </button>
                                     <button class="filter-btn om-filter-btn" data-filter="manager" data-value="Hippo" title="Hippo 負責的店鋪">
                                         <span class="om-name">Hippo</span>
-                                        <span class="om-count">14間</span>
+                                        <span class="om-count">15間</span>
                                     </button>
                                     <button class="filter-btn om-filter-btn" data-filter="manager" data-value="Ivy" title="Ivy 負責的店鋪">
                                         <span class="om-name">Ivy</span>
@@ -438,19 +494,20 @@
                     <table class="results-table" id="resultsTable">
                         <thead>
                             <tr>
-                                <th style="width:8%">HK/MO</th>
-                                <th style="width:8%">舖類</th>
-                                <th style="width:10%">貨場面積</th>
-                                <th style="width:12%">類型代碼</th>
-                                <th style="width:12%">店舖數量</th>
-                                <th style="width:15%">Safety Stock</th>
-                                <th style="width:15%">ALL SHOP QTY</th>
-                                <th style="width:10%">Carry</th>
+                                <th style="width:7%">HK/MO</th>
+                                <th style="width:7%">舖類</th>
+                                <th style="width:8%">貨場面積</th>
+                                <th style="width:8%">客源</th>
+                                <th style="width:10%">類型代碼</th>
+                                <th style="width:10%">店舖數量</th>
+                                <th style="width:13%">Safety Stock</th>
+                                <th style="width:13%">ALL SHOP QTY</th>
+                                <th style="width:8%">Carry</th>
                             </tr>
                         </thead>
                         <tbody id="resultTableBody">
                             <tr>
-                                <td colspan="8" class="empty-message">請選擇店舖後點擊「計算」按鈕</td>
+                                <td colspan="9" class="empty-message">請選擇店舖後點擊「計算」按鈕</td>
                             </tr>
                         </tbody>
                     </table>
@@ -489,6 +546,7 @@
                                 <th>HK/MO</th>
                                 <th>代號</th>
                                 <th>店舖</th>
+                                <th>客源</th>
                                 <th>類型代碼</th>
                                 <th>舖類</th>
                                 <th>貨場面積</th>
@@ -499,7 +557,7 @@
                         </thead>
                         <tbody id="detailTableBody">
                             <tr>
-                                <td colspan="9" class="empty-message">計算後將顯示詳細清單</td>
+                                <td colspan="10" class="empty-message">計算後將顯示詳細清單</td>
                             </tr>
                         </tbody>
                     </table>
@@ -550,10 +608,121 @@ MA01,澳門廣場,MO,B,M,
                     </div>
                 </div>
             </section>
+        </div><!-- /tab-calculator -->
+
+        <!-- ===== 分頁：快速報表 ===== -->
+        <div class="tab-panel" id="tab-quickReport">
+            <section class="section qr-section">
+                <h2>📊 快速報表 — 一鍵產出 Excel</h2>
+                <p class="hint">簡潔模式：選擇店鋪 → 自動計算 → 直接匯出 Excel，表格即所見即所得</p>
+
+                <!-- 頂部操作列 -->
+                <div class="qr-toolbar">
+                    <div class="qr-toolbar-left">
+                        <button id="qrSelectAll" class="btn btn-primary btn-sm">全選</button>
+                        <button id="qrDeselectAll" class="btn btn-secondary btn-sm">取消全選</button>
+                        <span class="qr-divider"></span>
+                        <button class="qr-filter-btn" data-qr-filter="HK">🇭🇰 香港</button>
+                        <button class="qr-filter-btn" data-qr-filter="MO">🇲🇴 澳門</button>
+                        <span class="qr-divider"></span>
+                        <select id="qrOmFilter" class="qr-select">
+                            <option value="">全部 OM</option>
+                        </select>
+                    </div>
+                    <div class="qr-toolbar-right">
+                        <span class="qr-selected-count" id="qrSelectedCount">已選 0 間店鋪</span>
+                        <button id="qrExportExcel" class="btn btn-apply btn-lg" disabled>📊 匯出 Excel</button>
+                    </div>
+                </div>
+
+                <!-- 即時預覽表格 -->
+                <div class="qr-table-wrapper">
+                    <table class="qr-table" id="qrTable">
+                        <thead>
+                            <tr>
+                                <th class="qr-th-check"><input type="checkbox" id="qrCheckAll" title="全選/取消"></th>
+                                <th>代號</th>
+                                <th>店鋪名稱</th>
+                                <th>區域</th>
+                                <th>舖類</th>
+                                <th>面積</th>
+                                <th>OM</th>
+                                <th class="qr-th-ss">Safety Stock</th>
+                                <th>Carry</th>
+                            </tr>
+                        </thead>
+                        <tbody id="qrTableBody">
+                            <!-- JS 動態生成 -->
+                        </tbody>
+                        <tfoot id="qrTableFoot">
+                            <!-- JS 動態生成合計列 -->
+                        </tfoot>
+                    </table>
+                </div>
+
+                <!-- 底部彙總面板 -->
+                <div class="qr-summary-panel" id="qrSummaryPanel" style="display:none">
+                    <div class="qr-summary-grid">
+                        <div class="qr-stat-card">
+                            <div class="qr-stat-label">已選店鋪</div>
+                            <div class="qr-stat-value" id="qrStatStores">0</div>
+                        </div>
+                        <div class="qr-stat-card qr-stat-highlight">
+                            <div class="qr-stat-label">Safety Stock 總計</div>
+                            <div class="qr-stat-value" id="qrStatTotal">0</div>
+                        </div>
+                        <div class="qr-stat-card">
+                            <div class="qr-stat-label">Carry 店鋪</div>
+                            <div class="qr-stat-value" id="qrStatCarry">0</div>
+                        </div>
+                        <div class="qr-stat-card">
+                            <div class="qr-stat-label">平均 SS</div>
+                            <div class="qr-stat-value" id="qrStatAvg">0</div>
+                        </div>
+                    </div>
+
+                    <!-- 按類型彙總小表格 -->
+                    <details class="qr-details">
+                        <summary>📈 按店鋪類型彙總</summary>
+                        <table class="qr-sub-table" id="qrTypeSummaryTable">
+                            <thead>
+                                <tr>
+                                    <th>類型代碼</th>
+                                    <th>區域</th>
+                                    <th>舖類</th>
+                                    <th>面積</th>
+                                    <th>店鋪數</th>
+                                    <th>Safety Stock</th>
+                                    <th>小計</th>
+                                </tr>
+                            </thead>
+                            <tbody id="qrTypeSummaryBody"></tbody>
+                        </table>
+                    </details>
+
+                    <details class="qr-details">
+                        <summary>👤 按 OM 彙總</summary>
+                        <table class="qr-sub-table" id="qrOmSummaryTable">
+                            <thead>
+                                <tr>
+                                    <th>營運經理</th>
+                                    <th>店鋪數</th>
+                                    <th>SS 總計</th>
+                                    <th>平均 SS</th>
+                                    <th>佔比</th>
+                                </tr>
+                            </thead>
+                            <tbody id="qrOmSummaryBody"></tbody>
+                        </table>
+                    </details>
+                </div>
+            </section>
+        </div><!-- /tab-quickReport -->
+
         </main>
 
         <footer>
-            <p>New SKU Safety (Buffer) Stock Calculator (2026) – RP Team <span style="font-weight:normal;">(Based on a concept by CMPD-Natalie Wong)</span></p>
+            <p>New SKU Safety (Buffer) Stock Calculator (2026) – RP Team Tool</p>
         </footer>
     </div>
 
