--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@ MA01,澳門廣場,MO,B,M,
         </main>
 
         <footer>
-            <p>New SKU Safety (Buffer) Stock Calculator (2026) – RP Team Tool</p>
+            <p>New SKU Safety (Buffer) Stock Calculator (2026) – RP Team (Based on a concept by CMPD-Natalie Wong)</p>
         </footer>
     </div>
 
